crates/compiler/src/tests/e2e/good/0283_if_then_pattern_match/main.gom
fn main() {
    let x = if true { 1 } else { 2 };
    match x {
        1 => println("one"),
        2 => println("two"),
        _ => println("other"),
    };
}
