crates/compiler/src/tests/e2e/bad/0021_string_multiply/main.gom
fn main() -> unit {
  let x = 100;
  let x = "one hundred";
  let doubled = x * 2;
  println(doubled)
}
